# xlang

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  clean.sh  comment_formate  configure  requirements.txt  test.xl
c/: CMakeLists.txt  xlang.c
c/include/: libhaskell.h
c/include/ghc9.4.8/: HsFFI.h  ghcautoconf.h  ghcplatform.h  ghcversion.h  stg_types.h
c/src/: xlang.c
compiler/: CHANGELOG.md  Ir.txt  LICENSE  README.md  Setup.hs  cabal.project.local  compiler.cabal  debug.json  test_import_short.x  test_input.input  tmp-ParseExpr-test.y  tmp-glr-ParseExpr.hs  tmp-glr-ParseExprData.hs  tmp_findprime.x  tmp_isprime.x  tmp_static_float.xl  tmp_util.x
compiler/.cabal/: config
compiler/.cabal/store/ghc-9.4.8/OneTuple-0.4.2.1-5a9305035f3a77f4021f4721fd853055ac6a5c74/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/QuickCheck-2.16.0.0-62ab5a1a03f5c8f6804cd45036d213b180b8ecd3/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/StateVar-1.2.2-27e50892aa94c232bd05181b1a4b88cb5dd663cb/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/aeson-2.2.3.0-09edfd31ba7327c093d123cd971e3ba787ee16f5/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/aeson-pretty-0.8.10-74f8a081ddd4669a7483ec552907ddff7af0a581/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/alex-3.5.4.0-5c40c26c739eabdd9682f65da7120280a6796e71/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/ansi-terminal-1.1.5-1d3e0589234bd087daea5bab2e77a4cef0e8c285/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/ansi-terminal_-1.1.3-1ed15b542074a666c3bc117fc70b6de610e35465/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/assoc-1.1.1-354da8048cf88bf088ffb25e6c6db4cc4589c8d5/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/base-compat-0.15.0-143a5d2e38307c2dde3f0f798e0b3eea3f6fa762/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/base-orphans-0.9.4-db924352ef8e48bd61a01c307625d9a939bd244d/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/bifunctors-5.6.3-3a16779744ad4e582b96b659d2a66d3e19302a06/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/call-stack-0.4.0-350778ad77115abd3b46651a2f07f82a2e59b837/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/character-ps-0.1-d758af87d45b551c6870a15386ce212c847b1177/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/colour-2.3.6-de09343268358da544545f5f7b0be963ee18934a/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/comonad-5.0.10-f584f9779dbd480b09b52c9698880ec49c0dae7d/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/contravariant-1.5.6-e6c8146acb0703186a2af4ba0e0c7f2682eb4fb0/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/data-fix-0.3.4-757ca70eb60f641756a33cc3edd3226e3aa3ab78/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/distributive-0.6.3-8c270d3323f258f5053119e8abf8eba63b6bad09/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/dlist-1.0-2a55380feb36a441645350a4a446aa8f698edaae/: cabal-hash.txt
compiler/.cabal/store/ghc-9.4.8/foldable1-cla_-0.1.3-d5be3a5b6242548a3ad2d239895d644efe502f46/: cabal-hash.txt
compiler/app/: Main.hs
compiler/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
compiler/dist-newstyle/packagedb/ghc-9.4.8/: compiler-0.1.0.0-inplace.conf  package.cache
compiler/dist-newstyle/packagedb/ghc-9.6.7/: compiler-0.1.0.0-inplace.conf  package.cache
compiler/examples/: Ir.txt  Main.x  debug.json
compiler/src/: CompileJava.hs  CompileX64.hs  Tool.hs  Xlang.hs
compiler/src/IR/: IRLowing.hs  Liveness.hs  Lowing.hs  Optimize.hs  TAC.hs  TACLowing.hs
compiler/src/Lex/: Token.hs  TokenPass.hs  Tokenizer.x
compiler/src/Lowing/: JVM.hs  JVMJson.hs  JVMLowing.hs
compiler/src/Parse/: GrammarDecl  GrammarDecl.inc  GrammarExpr  GrammarExpr.inc  GrammarStmtBlock  GrammarStmtBlock.inc  ParseBlock.ypp  ParseExpr.ypp  ParseProgm.ypp  ParseProgm_tmp.y  ParseStmt.ypp  ParseStmt_tmp.y  ParserBasic.hs  SyntaxTree.hs
compiler/src/Semantic/: CheckProgram.hs  ContextCheck.hs  JavaLibLoader.hs  LibLoader.hs  NameEnv.hs  NativeLibLoader.hs  OpInfer.hs  ReturnCheck.hs  SemanticCheck.hs  SemanticDebug.hs  TypeCheck.hs  TypeEnv.hs
compiler/src/Util/: Basic.hs  Exception.hs  FileHelper.hs  Mangle.hs  Type.hs
compiler/src/X64Lowing/: ASM.hs  Lowing.hs
compiler/src/X86Lowing/: ASM.hs  Lowing.hs
compiler/test/: CompileX64Test.hs  Main.hs
compiler/test/IR/: LowingTest.hs  OptimizeTest.hs  TACLowingTest.hs  TACTest.hs
compiler/test/Lex/: TokenPassTest.hs  TokenTest.hs  TokenizerTest.hs
compiler/test/Lowing/: JVMJsonTest.hs  JVMLowingTest.hs  JVMTest.hs
compiler/test/Parse/: ParseBlockTest.hs  ParseExprTest.hs  ParseProgmTest.hs  ParseStmtTest.hs  ParserBasicTest.hs  SyntaxTreeTest.hs
compiler/test/Semantic/: CheckProgramTest.hs  ContextCheckTest.hs  NameEnvTest.hs  NativeLibLoaderTest.hs  OpInferTest.hs  ReturnCheckTest.hs  SemanticCheckTest.hs  SemanticDebugTest.hs  TypeCheckTest.hs  TypeEnvTest.hs
compiler/test/Util/: BasicTest.hs  CompileJavaPolicyTest.hs  ExceptionTest.hs  FileHelperTest.hs  MangleTest.hs  TypeTest.hs  XlangNativeLibsTest.hs
compiler/test/X64Lowing/: LowingTest.hs
runtime/: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  configure
runtime/core/: CHANGELOG.md  Makefile  README.md  configure
runtime/core/include/xlang/: xtypedef.h
runtime/gc/: CHANGELOG.md
runtime/include/core/xlang/: xtypedef.h
src/: CMakeLists.txt
src/main/: CMakeLists.txt
src/main/c/include/: io.h  string_regex.h
src/main/c/src/: file.c  io.c  string_regex.c
src/main/resources/syntax/: compiler_token_rules.json
src/main/xlang/compiler/: TestInput.test  Xlang.x
src/main/xlang/lex/: Codegen.x  Lex.x  Token.x  TokenizerHelper.x  tokenizer_codegen.py
src/main/xlang/lexer/: Lex.x  Token.x  TokenizerHelper.x  tokenizer_codegen.py
src/main/xlang/util/: ArrayList.x  CharUtil.x  IO.x  TypeConvert.x
src/test/: CMakeLists.txt
src/test/xlang/: Test.x
src/test/xlang/lexer/: LexTest.x
src/test/xlang/test/: Testsuite.x
src/test/xlang/util/: ArrayListTest.x  TypeConvertTest.x
(+1117 files in other folders)
