cabal-version:      3.0
name:               compiler
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Wang Di
maintainer:         dw725@ic.ac.uk
build-type:         Custom

extra-source-files:
    src/Parse/GrammarExpr,
    src/Parse/GrammarStmtBlock,
    src/Parse/GrammarDecl,
    src/Parse/ParseExpr.ypp,
    src/Parse/ParseStmt.ypp,
    src/Parse/ParseBlock.ypp,
    src/Parse/ParseProgm.ypp

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -O3

custom-setup
    setup-depends:
        base,
        Cabal,
        directory,
        filepath,
        process,
        containers

library
    import:           warnings

    exposed-modules:
        Xlang
        CompileJava
        Util.Basic
        Util.Type
        Util.FileHelper
        Util.Exception

        Lex.TokenPass
        Lex.Token
        Lex.Tokenizer

        Parse.SyntaxTree
        Parse.ParserBasic
        Parse.ParseExpr
        Parse.ParseStmt
        Parse.ParseBlock
        Parse.ParseProgm

        Semantic.NameEnv
        Semantic.ContextCheck
        Semantic.OpInfer
        Semantic.TypeEnv
        Semantic.TypeCheck
        Semantic.ReturnCheck
        Semantic.SemanticDebug
        Semantic.CheckProgram
        Semantic.LibLoader

        IR.TAC
        IR.TACLowing
        IR.Optimize
        IR.Lowing
        IR.Liveness

        Lowing.JVM
        Lowing.JVMJson
        Lowing.JVMLowing

        X86Lowing.ASM
    autogen-modules:
        Parse.ParseExpr
        Parse.ParseStmt
        Parse.ParseBlock
        Parse.ParseProgm

    build-depends:
        base >=4.17.2.1,
        containers,
        unordered-containers,
        hashable,
        text,
        array,
        aeson,
        aeson-pretty,
        bytestring,
        process,
        directory,
        filepath,
        time,
        mtl,
        async,
        regex-base,
        regex-tdfa

    build-tool-depends:
        alex:alex,
        happy:happy

    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: CPP

    x-alex-sources:         src/Lex/Tokenizer.x
    x-alex-output-dir:      src/Lex

    x-happy-sources:        src/Parse/ParseExpr.y,
                            src/Parse/ParseStmt.y,
                            src/Parse/ParseBlock.y,
                            src/Parse/ParseProgm.y
    x-happy-output-dir:     src/Parse

executable xlang
    import:           warnings

    main-is:          src/Xlang.hs
    ghc-options:      -main-is Xlang.main -threaded -rtsopts

    build-depends:
        base >=4.17.2.1,
        compiler,
        containers,
        unordered-containers,
        hashable,
        text,
        array,
        aeson,
        aeson-pretty,
        bytestring,
        process,
        directory,
        filepath,
        mtl,
        async,
        regex-base,
        regex-tdfa

    hs-source-dirs:   .
    default-language: Haskell2010
    default-extensions: CPP

test-suite compiler-test
    import:           warnings

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    default-language: Haskell2010

    other-modules:
        Lex.TokenPassTest
        Lex.TokenizerTest

        Parse.ParserBasicTest
        Parse.SyntaxTreeTest
        Parse.ParseExprTest
        Parse.ParseBlockTest
        Parse.ParseStmtTest
        Parse.ParseProgmTest

        IR.LowingTest
        IR.TACTest
        IR.TACLowingTest
        IR.OptimizeTest

        Lowing.JVMTest
        Lowing.JVMJsonTest
        Lowing.JVMLowingTest

        Semantic.NameEnvTest
        Semantic.ContextCheckTest
        Semantic.CheckProgramTest
        Semantic.OpInferTest
        Semantic.TypeEnvTest
        Semantic.TypeCheckTest
        Semantic.ReturnCheckTest
        Semantic.SemanticDebugTest

        Util.BasicTest
        Util.ExceptionTest
        Util.TypeTest

    build-depends:
        compiler,
        base >=4.17.2.1,
        aeson,
        text,
        bytestring,
        containers,
        unordered-containers,
        mtl,
        async,
        directory,
        tasty,
        tasty-hunit,
        regex-base,
        regex-tdfa

    build-tool-depends:
        alex:alex,
        happy:happy

    x-alex-sources:         src/Lex/Tokenizer.x
    x-alex-output-dir:      src/Lex

    x-happy-sources:        src/Parse/ParseExpr.y,
                            src/Parse/ParseStmt.y,
                            src/Parse/ParseBlock.y,
                            src/Parse/ParseProgm.y
    x-happy-output-dir:     src/Parse


